@@ -55,6 +55,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Not setting various parameters in Foreign Repos now fails more gracefully
 * (bug 2333) Redirects are properly rendered when previewing an edit.
 * (bug 14972) Use localized alias of Special:Search on all search forms
+* (bug 11035) Special:Search should have descriptive <title>
 
 === API changes in 1.14 ===
 
